Week 6: Corrections